--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,16 +2,45 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Debug Main Process",
+      "name": "Electron: Main",
       "type": "node",
       "request": "launch",
-      "cwd": "${workspaceFolder}",
-      "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron",
+      "cwd": "${workspaceRoot}",
+      "args": [],
+      "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
       "windows": {
-        "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron.cmd"
+        "runtimeExecutable": "${workspaceRoot}\\node_modules\\.bin\\electron.cmd"
       },
-      "args": ["."],
-      "outputCapture": "std"
+      "preLaunchTask": "Start Webpack Dev",
+      "runtimeArgs": [
+        "--remote-debugging-port=9223",
+        "-r",
+        "@babel/register",
+        "./app/main.dev.babel.js"
+      ],
+      "env": {
+        "NODE_ENV": "development",
+        "HOT": "1",
+        "HIDE_DEV_TOOLS": "1"
+      },
+      "protocol": "inspector",
+      "sourceMaps": true,
+      "outFiles": [],
+      "timeout": 150000
+    },
+    {
+      "name": "Electron: Renderer",
+      "type": "chrome",
+      "request": "attach",
+      "port": 9223,
+      "webRoot": "${workspaceFolder}",
+      "timeout": 150000
+    }
+  ],
+  "compounds": [
+    {
+      "name": "Electron: All",
+      "configurations": ["Electron: Main", "Electron: Renderer"]
     }
   ]
 }
