--- a/app/package.json
+++ b/app/package.json
@@ -14,5 +14,8 @@
     "postinstall": "yarn electron-rebuild"
   },
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "@types/latinize": "^0.2.15"
+  }
 }
