--- a/package.json
+++ b/package.json
@@ -194,7 +194,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "^4.7.6",
     "@types/jest": "^26.0.5",
-    "@types/node": "12",
+    "@types/node": "^14.0.27",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
@@ -280,6 +280,7 @@
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.2",
     "electron-updater": "^4.3.1",
+    "encoding-japanese": "^1.0.30",
     "history": "^4.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.12.0",
@@ -290,7 +291,8 @@
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.5",
     "source-map-support": "^0.5.19",
-    "sqlite": "^4.0.12"
+    "sqlite": "^4.0.12",
+    "string-sanitizer": "^1.1.1"
   },
   "devEngines": {
     "node": ">=7.x",
