--- a/app/package.json
+++ b/app/package.json
@@ -14,8 +14,12 @@
     "postinstall": "yarn electron-rebuild"
   },
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "sqlite3": "^5.0.0"
+  },
   "devDependencies": {
-    "@types/latinize": "^0.2.15"
+    "@types/detect-character-encoding": "^0.7.0",
+    "@types/latinize": "^0.2.15",
+    "@types/sqlite3": "^3.1.6"
   }
 }
