--- a/package.json
+++ b/package.json
@@ -277,10 +277,11 @@
     "@reduxjs/toolkit": "^1.4.0",
     "antd": "^4.5.2",
     "connected-react-router": "^6.6.1",
+    "csv-file-validator": "^1.8.0",
+    "csv-parse": "^4.12.0",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.2",
     "electron-updater": "^4.3.1",
-    "encoding-japanese": "^1.0.30",
     "history": "^4.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.12.0",
@@ -291,7 +292,6 @@
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.5",
     "source-map-support": "^0.5.19",
-    "sqlite": "^4.0.12",
     "string-sanitizer": "^1.1.1"
   },
   "devEngines": {
