--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,31 +2,13 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Electron: Main",
       "type": "node",
       "request": "launch",
-      "cwd": "${workspaceRoot}",
-      "args": [],
-      "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
-      "windows": {
-        "runtimeExecutable": "${workspaceRoot}\\node_modules\\.bin\\electron.cmd"
-      },
-      "preLaunchTask": "Start Webpack Dev",
-      "runtimeArgs": [
-        "--remote-debugging-port=9223",
-        "-r",
-        "@babel/register",
-        "./app/main.dev.babel.js"
-      ],
-      "env": {
-        "NODE_ENV": "development",
-        "HOT": "1",
-        "HIDE_DEV_TOOLS": "1"
-      },
+      "name": "Electron: Main",
       "protocol": "inspector",
-      "sourceMaps": true,
-      "outFiles": [],
-      "timeout": 150000
+      "runtimeExecutable": "yarn",
+      "runtimeArgs": ["start-main-debug"],
+      "preLaunchTask": "Start Webpack Dev"
     },
     {
       "name": "Electron: Renderer",
@@ -34,7 +16,7 @@
       "request": "attach",
       "port": 9223,
       "webRoot": "${workspaceFolder}",
-      "timeout": 150000
+      "timeout": 15000
     }
   ],
   "compounds": [
