--- a/package.json
+++ b/package.json
@@ -220,7 +220,7 @@
     "detect-port": "^1.3.0",
     "electron": "^8",
     "electron-builder": "^22.3.6",
-    "electron-devtools-installer": "^2.2.4",
+    "electron-devtools-installer": "3.1.1",
     "electron-rebuild": "^1.10.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -277,7 +277,7 @@
     "@reduxjs/toolkit": "^1.4.0",
     "antd": "^4.5.2",
     "connected-react-router": "^6.6.1",
-    "csv-file-validator": "^1.8.0",
+    "csv-file-validator": "git+https://github.com/platinumitpl/csv-file-validator.git",
     "csv-parse": "^4.12.0",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.2",
