--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/detect-character-encoding": "^0.7.0",
     "@types/latinize": "^0.2.15",
+    "@types/objects-to-csv": "^1.3.0",
     "@types/sqlite3": "^3.1.6"
   }
 }
