--- a/package.json
+++ b/package.json
@@ -275,14 +275,19 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@hot-loader/react-dom": "^16.13.0",
     "@reduxjs/toolkit": "^1.4.0",
+    "@types/ssh2-sftp-client": "^5.2.0",
+    "@types/validator": "^13.1.0",
     "antd": "^4.5.2",
+    "archiver": "^5.0.0",
     "connected-react-router": "^6.6.1",
-    "csv-file-validator": "git+https://github.com/platinumitpl/csv-file-validator.git",
+    "csv-file-validator": "https://github.com/platinumitpl/csv-file-validator.git",
     "csv-parse": "^4.12.0",
+    "diff-arrays-of-objects": "^1.1.7",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.2",
     "electron-updater": "^4.3.1",
     "history": "^4.7.2",
+    "objects-to-csv": "^1.3.6",
     "react": "^16.13.1",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.21",
@@ -292,7 +297,11 @@
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.5",
     "source-map-support": "^0.5.19",
-    "string-sanitizer": "^1.1.1"
+    "ssh2-sftp-client": "^5.2.2",
+    "stream-to-blob": "^2.0.1",
+    "string-sanitizer": "^1.1.1",
+    "validator": "^13.1.1",
+    "zip-lib": "^0.7.1"
   },
   "devEngines": {
     "node": ">=7.x",
