--- a/package.json
+++ b/package.json
@@ -286,6 +286,7 @@
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.2",
     "electron-updater": "^4.3.1",
+    "fs-extra": "^9.0.1",
     "history": "^4.7.2",
     "objects-to-csv": "^1.3.6",
     "react": "^16.13.1",
@@ -300,6 +301,7 @@
     "ssh2-sftp-client": "^5.2.2",
     "stream-to-blob": "^2.0.1",
     "string-sanitizer": "^1.1.1",
+    "unique-objects": "^1.0.5",
     "validator": "^13.1.1",
     "zip-lib": "^0.7.1"
   },
