--- a/package.json
+++ b/package.json
@@ -96,19 +96,20 @@
     },
     "publish": {
       "provider": "github",
-      "owner": "electron-react-boilerplate",
-      "repo": "electron-react-boilerplate",
-      "private": false
+      "owner": "omniteq",
+      "repo": "asmdatamanager",
+      "private": true,
+      "token": "da8a95f33fbfc65934e61306e768b60a1010b1ee"
     }
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/electron-react-boilerplate/electron-react-boilerplate.git"
+    "url": "git+https://gitlab.com/jp_omniteq/asmdatamanager.git"
   },
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://electron-react-boilerplate.js.org"
+    "name": "Jacek Pietsch Omniteq",
+    "email": "info@omniteq.pl",
+    "url": "https://omniteq.pl/asmdatamanager"
   },
   "contributors": [
     {
@@ -275,14 +276,13 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@hot-loader/react-dom": "^16.13.0",
     "@reduxjs/toolkit": "^1.4.0",
-    "@types/ssh2-sftp-client": "^5.2.0",
-    "@types/validator": "^13.1.0",
     "antd": "^4.5.2",
     "archiver": "^5.0.0",
     "connected-react-router": "^6.6.1",
     "csv-file-validator": "https://github.com/platinumitpl/csv-file-validator.git",
     "csv-parse": "^4.12.0",
     "diff-arrays-of-objects": "^1.1.7",
+    "dotenv": "^8.2.0",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.2",
     "electron-updater": "^4.3.1",
