--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "asm-data-manager",
   "productName": "ASM Data Manager",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "This app allows easy conversion of data from Microsoft School Data Sync to Apple School Manager. Apart from that, it validates files, displays friendly preview, uploads the zip to SFTP, and archive files in a structured manner.",
   "scripts": {
     "build": "concurrently \"yarn build-main\" \"yarn build-renderer\"",
@@ -98,12 +98,12 @@
       "provider": "github",
       "owner": "omniteq",
       "repo": "asmdatamanager",
-      "private": true
+      "private": false
     }
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/omniteq/asmdatamanager.git"
+    "url": "git+https://github.com/omniteq/asmdatamanager_pub.git"
   },
   "author": {
     "name": "Jacek Pietsch Omniteq",
