--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "asm-data-manager",
   "productName": "ASM Data Manager",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "This app allows easy conversion of data from Microsoft School Data Sync to Apple School Manager. Apart from that, it validates files, displays friendly preview, uploads the zip to SFTP, and archive files in a structured manner.",
   "scripts": {
     "build": "concurrently \"yarn build-main\" \"yarn build-renderer\"",
@@ -18,6 +18,7 @@
     "package": "yarn build && electron-builder build --publish never",
     "package-all": "yarn build && electron-builder build -mwl",
     "package-ci": "yarn postinstall && yarn build && electron-builder --publish always",
+    "package-ci-all": "yarn postinstall && yarn build && electron-builder -mwl --publish always",
     "package-mac": "yarn build && electron-builder build --mac",
     "package-linux": "yarn build && electron-builder build --linux",
     "package-win": "yarn build && electron-builder build --win --x64",
