--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
       "hardenedRuntime": true,
       "entitlements": "./resources/entitlements.mac.inherit.plist",
       "entitlementsInherit": "./resources/entitlements.mac.inherit.plist",
-      "target": ["dmg"]
+      "target": [
+        "dmg"
+      ]
     },
     "dmg": {
       "contents": [
@@ -297,6 +299,7 @@
     "objects-to-csv": "^1.3.6",
     "react": "^16.13.1",
     "react-dom": "^16.12.0",
+    "react-highlight-selection": "^1.0.2",
     "react-hot-loader": "^4.12.21",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
